Warn when QML element name starts with lowercase

Add a compile time warning when a QML element name starts with a
lowercase letter.

Pick-to: 6.12 6.11
Fixes: QTBUG-138244
Change-Id: I476299f039d54f926f9a82c44889b05a487923f3
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>