tests/auto/qml/qmltyperegistrar/tst_qmltyperegistrar.h
@@ -1028,6 +1028,7 @@ private slots:
     void typeInModuleMajorVersionZero();
     void resettableProperty();
     void duplicateExportWarnings();
+
     void clonedSignal();
     void baseVersionInQmltypes();
     void unconstructibleValueType();
@@ -1051,6 +1052,8 @@ private slots:
     void consistencyWarnings();
     void deduplicateCleanPaths();
     void enumWarnings();
+
+    void lowercaseEnumWarning();
 
     void relatedAddedInVersion();
     void longNumberTypes();
